--- a/src/main/resources/java-versions.html
+++ b/src/main/resources/java-versions.html
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>What's new in Java</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/whats-new.css">
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/whats-new.js"></script>
-</head>
-<body>
-  <th:block th:replace="toolbar :: toolbar"></th:block>
-  <div class="java-versions">
+<div th:fragment="java-versions" class="java-versions">
     <div class="panel panel-default java-version"
          th:with="javaVersion=${entry.key},
                   javaPackages=${entry.value},
@@ -85,7 +72,7 @@
                             th:each="javaMember : ${javaMembers}">
                           <div class="title">
                             <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaMember)}" rel="external">
-                              [[${javaMember.constructorSafeSignature}]]
+                              [[${javaMember.prettySignature}]]
                             </a>
                           </div>
                         </li>
@@ -102,5 +89,3 @@
       </div>
     </div>
   </div>
-  <th:block th:replace="filter-dialog :: dialog"></th:block>
-</body>
