--- a/src/main/resources/toolbar-new.html
+++ b/src/main/resources/toolbar-new.html
@@ -6,4 +6,9 @@
     <a href="#" id="expand-all">Expand All</a>
     |
     <a href="#" id="filter">Filter</a><span id="filter-content">: <span id="current-filter"></span> <span id="clear-filter" class="glyphicon glyphicon-remove"></span></span>
+    <span class="related">
+        <a href="deprecated.html">What's deprecated</a>
+        |
+        <a href="removed.html">What's removed</a>
+    </span>
   </nav>
