Added pages with deprecated and removed packages, classes and members

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <a href="#" id="expand-all">Expand All</a>
     |
     <a href="#" id="filter">Filter</a><span id="filter-content">: <span id="current-filter"></span> <span id="clear-filter" class="glyphicon glyphicon-remove"></span></span>
+    <span class="related">
+        <a href="deprecated.html">What's deprecated</a>
+        |
+        <a href="removed.html">What's removed</a>
+    </span>
   </nav>
   <div class="java-versions">
     <div class="panel panel-default java-version" id="java-10-panel">
