Removed several false deprecation positives

--- a/deprecated.html
+++ b/deprecated.html
@@ -720,13 +720,6 @@
                     </a>
                   </div>
                 </div>
-                <div class="panel panel-default java-class" id="java-9_java-lang-Deprecated-panel" data-filter-value="java.lang.Deprecated">
-                  <div class="panel-heading" id="java-9_java-lang-Deprecated-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/lang/Deprecated.html" rel="external">
-                      Deprecated
-                    </a>
-                  </div>
-                </div>
                 <div class="panel panel-default java-class" id="java-9_java-lang-Double-panel" data-filter-value="java.lang.Double">
                   <div class="panel-heading" id="java-9_java-lang-Double-header">
                     <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-9_java-lang-Double-content" aria-controls="java-9_java-lang-Double-content">
@@ -1000,9 +993,92 @@
               <div class="panel-body">
                 <div class="panel panel-default java-class" id="java-9_java-math-BigDecimal-panel" data-filter-value="java.math.BigDecimal">
                   <div class="panel-heading" id="java-9_java-math-BigDecimal-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html" rel="external">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-9_java-math-BigDecimal-content" aria-controls="java-9_java-math-BigDecimal-content">
                       BigDecimal
                     </a>
+                  </div>
+                  <div class="collapse" id="java-9_java-math-BigDecimal-content" aria-labelledby="java-9_java-math-BigDecimal-header">
+                    <div class="panel-body">
+                      <ul class="list-unstyled">
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_CEILING" rel="external">
+                              ROUND_CEILING
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_DOWN" rel="external">
+                              ROUND_DOWN
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_FLOOR" rel="external">
+                              ROUND_FLOOR
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_HALF_DOWN" rel="external">
+                              ROUND_HALF_DOWN
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_HALF_EVEN" rel="external">
+                              ROUND_HALF_EVEN
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_HALF_UP" rel="external">
+                              ROUND_HALF_UP
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_UNNECESSARY" rel="external">
+                              ROUND_UNNECESSARY
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#ROUND_UP" rel="external">
+                              ROUND_UP
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#divide-java.math.BigDecimal-int-" rel="external">
+                              divide(java.math.BigDecimal,int)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#divide-java.math.BigDecimal-int-int-" rel="external">
+                              divide(java.math.BigDecimal,int,int)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/math/BigDecimal.html#setScale-int-int-" rel="external">
+                              setScale(int,int)
+                            </a>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1392,24 +1468,6 @@
                   <div class="panel-heading" id="java-9_java-util-logging-LoggingMXBean-header">
                     <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/util/logging/LoggingMXBean.html" rel="external">
                       LoggingMXBean
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="panel panel-default java-package" id="java-9_java-util-spi-panel" data-filter-value="java.util.spi">
-            <div class="panel-heading" id="java-9_java-util-spi-header">
-              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-9_java-util-spi-content" aria-controls="java-9_java-util-spi-content">
-                java.util.spi
-              </a>
-            </div>
-            <div class="collapse" id="java-9_java-util-spi-content" aria-labelledby="java-9_java-util-spi-header">
-              <div class="panel-body">
-                <div class="panel panel-default java-class" id="java-9_java-util-spi-LocaleServiceProvider-panel" data-filter-value="java.util.spi.LocaleServiceProvider">
-                  <div class="panel-heading" id="java-9_java-util-spi-LocaleServiceProvider-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/9/docs/api/java/util/spi/LocaleServiceProvider.html" rel="external">
-                      LocaleServiceProvider
                     </a>
                   </div>
                 </div>
@@ -2646,13 +2704,6 @@
             </div>
             <div class="collapse" id="java-8_java-rmi-server-content" aria-labelledby="java-8_java-rmi-server-header">
               <div class="panel-body">
-                <div class="panel panel-default java-class" id="java-8_java-rmi-server-RMISocketFactory-panel" data-filter-value="java.rmi.server.RMISocketFactory">
-                  <div class="panel-heading" id="java-8_java-rmi-server-RMISocketFactory-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/8/docs/api/java/rmi/server/RMISocketFactory.html" rel="external">
-                      RMISocketFactory
-                    </a>
-                  </div>
-                </div>
                 <div class="panel panel-default java-class" id="java-8_java-rmi-server-RemoteStub-panel" data-filter-value="java.rmi.server.RemoteStub">
                   <div class="panel-heading" id="java-8_java-rmi-server-RemoteStub-header">
                     <a class="btn btn-link" href="https://docs.oracle.com/javase/8/docs/api/java/rmi/server/RemoteStub.html" rel="external">
@@ -2676,9 +2727,22 @@
                 </div>
                 <div class="panel panel-default java-class" id="java-8_java-rmi-server-UnicastRemoteObject-panel" data-filter-value="java.rmi.server.UnicastRemoteObject">
                   <div class="panel-heading" id="java-8_java-rmi-server-UnicastRemoteObject-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/8/docs/api/java/rmi/server/UnicastRemoteObject.html" rel="external">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-8_java-rmi-server-UnicastRemoteObject-content" aria-controls="java-8_java-rmi-server-UnicastRemoteObject-content">
                       UnicastRemoteObject
                     </a>
+                  </div>
+                  <div class="collapse" id="java-8_java-rmi-server-UnicastRemoteObject-content" aria-labelledby="java-8_java-rmi-server-UnicastRemoteObject-header">
+                    <div class="panel-body">
+                      <ul class="list-unstyled">
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/javase/8/docs/api/java/rmi/server/UnicastRemoteObject.html#exportObject-java.rmi.Remote-" rel="external">
+                              exportObject(java.rmi.Remote)
+                            </a>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
