Updated with Java 11

--- a/deprecated.html
+++ b/deprecated.html
@@ -25,6 +25,129 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-11-panel">
+      <div class="panel-heading" id="java-11-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-11-content" aria-controls="java-11-content">
+          Java 11
+        </a>
+      </div>
+      <div class="collapse" id="java-11-content" aria-labelledby="java-11-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-package" id="java-11_java-util-jar-panel" data-filter-value="java.util.jar">
+            <div class="panel-heading" id="java-11_java-util-jar-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-11_java-util-jar-content" aria-controls="java-11_java-util-jar-content">
+                java.util.jar
+              </a>
+            </div>
+            <div class="collapse" id="java-11_java-util-jar-content" aria-labelledby="java-11_java-util-jar-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-class" id="java-11_java-util-jar-Pack200-panel" data-filter-value="java.util.jar.Pack200">
+                  <div class="panel-heading" id="java-11_java-util-jar-Pack200-header">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/jar/Pack200.html" rel="external">
+                      Pack200
+                    </a>
+                  </div>
+                </div>
+                <div class="panel panel-default java-class" id="java-11_java-util-jar-Pack200-Packer-panel" data-filter-value="java.util.jar.Pack200.Packer">
+                  <div class="panel-heading" id="java-11_java-util-jar-Pack200-Packer-header">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/jar/Pack200.Packer.html" rel="external">
+                      Pack200.Packer
+                    </a>
+                  </div>
+                </div>
+                <div class="panel panel-default java-class" id="java-11_java-util-jar-Pack200-Unpacker-panel" data-filter-value="java.util.jar.Pack200.Unpacker">
+                  <div class="panel-heading" id="java-11_java-util-jar-Pack200-Unpacker-header">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/jar/Pack200.Unpacker.html" rel="external">
+                      Pack200.Unpacker
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-package" id="java-11_jdk-nashorn-api-scripting-panel" data-filter-value="jdk.nashorn.api.scripting">
+            <div class="panel-heading" id="java-11_jdk-nashorn-api-scripting-header">
+              <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/jdk.scripting.nashorn/jdk/nashorn/api/scripting/package-summary.html" rel="external">
+                jdk.nashorn.api.scripting
+              </a>
+            </div>
+          </div>
+          <div class="panel panel-default java-package" id="java-11_jdk-nashorn-api-tree-panel" data-filter-value="jdk.nashorn.api.tree">
+            <div class="panel-heading" id="java-11_jdk-nashorn-api-tree-header">
+              <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/jdk.scripting.nashorn/jdk/nashorn/api/tree/package-summary.html" rel="external">
+                jdk.nashorn.api.tree
+              </a>
+            </div>
+          </div>
+          <div class="panel panel-default java-package" id="java-11_org-ietf-jgss-panel" data-filter-value="org.ietf.jgss">
+            <div class="panel-heading" id="java-11_org-ietf-jgss-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-11_org-ietf-jgss-content" aria-controls="java-11_org-ietf-jgss-content">
+                org.ietf.jgss
+              </a>
+            </div>
+            <div class="collapse" id="java-11_org-ietf-jgss-content" aria-labelledby="java-11_org-ietf-jgss-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-class" id="java-11_org-ietf-jgss-GSSContext-panel" data-filter-value="org.ietf.jgss.GSSContext">
+                  <div class="panel-heading" id="java-11_org-ietf-jgss-GSSContext-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-11_org-ietf-jgss-GSSContext-content" aria-controls="java-11_org-ietf-jgss-GSSContext-content">
+                      GSSContext
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-11_org-ietf-jgss-GSSContext-content" aria-labelledby="java-11_org-ietf-jgss-GSSContext-header">
+                    <div class="panel-body">
+                      <ul class="list-unstyled">
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#acceptSecContext(java.io.InputStream,java.io.OutputStream)" rel="external">
+                              acceptSecContext(java.io.InputStream,java.io.OutputStream)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#getMIC(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)" rel="external">
+                              getMIC(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#initSecContext(java.io.InputStream,java.io.OutputStream)" rel="external">
+                              initSecContext(java.io.InputStream,java.io.OutputStream)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#unwrap(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)" rel="external">
+                              unwrap(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#verifyMIC(java.io.InputStream,java.io.InputStream,org.ietf.jgss.MessageProp)" rel="external">
+                              verifyMIC(java.io.InputStream,java.io.InputStream,org.ietf.jgss.MessageProp)
+                            </a>
+                          </div>
+                        </li>
+                        <li class="java-member">
+                          <div class="title">
+                            <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.security.jgss/org/ietf/jgss/GSSContext.html#wrap(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)" rel="external">
+                              wrap(java.io.InputStream,java.io.OutputStream,org.ietf.jgss.MessageProp)
+                            </a>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-10-panel">
       <div class="panel-heading" id="java-10-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-10-content" aria-controls="java-10-content">
