--- a/src/main/resources/page-template-removed.html
+++ b/src/main/resources/page-template-removed.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>What's removed in Java</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/whats-new.css">
-  <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/whats-new.js"></script>
-</head>
+<th:block th:replace="page-header :: header('What\'s removed in Java')"></th:block>
 <body>
   <th:block th:replace="toolbar-removed :: toolbar"></th:block>
   <th:block th:replace="java-versions :: java-versions"></th:block>
