Updated with Java 13

--- a/deprecated.html
+++ b/deprecated.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/whats-new.js"></script>
   <script type="text/javascript">
-    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/12/docs/api/';
+    var latestBaseURL = 'https://docs.oracle.com/en/java/javase/13/docs/api/';
   </script>
 </head>
 <body>
@@ -28,6 +28,115 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-13-panel">
+      <div class="panel-heading" id="java-13-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13-content" aria-controls="java-13-content">
+          Java 13
+        </a>
+      </div>
+      <div class="collapse" id="java-13-content" aria-labelledby="java-13-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-13_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-13_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base-content" aria-controls="java-13_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-13_java-base-content" aria-labelledby="java-13_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-13_java-base_java-lang-panel" data-filter-value="java.lang">
+                  <div class="panel-heading" id="java-13_java-base_java-lang-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base_java-lang-content" aria-controls="java-13_java-base_java-lang-content">
+                      java.lang
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-13_java-base_java-lang-content" aria-labelledby="java-13_java-base_java-lang-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-13_java-base_java-lang-String-panel" data-filter-value="java.lang.String">
+                        <div class="panel-heading" id="java-13_java-base_java-lang-String-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base_java-lang-String-content" aria-controls="java-13_java-base_java-lang-String-content">
+                            String
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-13_java-base_java-lang-String-content" aria-labelledby="java-13_java-base_java-lang-String-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/String.html#formatted(java.lang.Object...)" rel="external">
+                                    formatted(java.lang.Object...)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/String.html#stripIndent()" rel="external">
+                                    stripIndent()
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.base/java/lang/String.html#translateEscapes()" rel="external">
+                                    translateEscapes()
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default java-module" id="java-13_java-compiler-panel" data-filter-value="java.compiler">
+            <div class="panel-heading" id="java-13_java-compiler-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-compiler-content" aria-controls="java-13_java-compiler-content">
+                java.compiler
+              </a>
+            </div>
+            <div class="collapse" id="java-13_java-compiler-content" aria-labelledby="java-13_java-compiler-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-13_java-compiler_javax-tools-panel" data-filter-value="javax.tools">
+                  <div class="panel-heading" id="java-13_java-compiler_javax-tools-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-compiler_javax-tools-content" aria-controls="java-13_java-compiler_javax-tools-content">
+                      javax.tools
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-13_java-compiler_javax-tools-content" aria-labelledby="java-13_java-compiler_javax-tools-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-13_java-compiler_javax-tools-StandardJavaFileManager-panel" data-filter-value="javax.tools.StandardJavaFileManager">
+                        <div class="panel-heading" id="java-13_java-compiler_javax-tools-StandardJavaFileManager-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-compiler_javax-tools-StandardJavaFileManager-content" aria-controls="java-13_java-compiler_javax-tools-StandardJavaFileManager-content">
+                            StandardJavaFileManager
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-13_java-compiler_javax-tools-StandardJavaFileManager-content" aria-labelledby="java-13_java-compiler_javax-tools-StandardJavaFileManager-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="java.compiler/javax/tools/StandardJavaFileManager.html#getJavaFileObjectsFromPaths(java.lang.Iterable)" rel="external">
+                                    getJavaFileObjectsFromPaths(java.lang.Iterable)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-12-panel">
       <div class="panel-heading" id="java-12-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-12-content" aria-controls="java-12-content">
@@ -1565,14 +1674,14 @@
                             <ul class="list-unstyled">
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#traceInstructions(boolean)" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/lang/Runtime.html#traceInstructions(boolean)" rel="external">
                                     traceInstructions(boolean)
                                   </a>
                                 </div>
                               </li>
                               <li class="java-member">
                                 <div class="title">
-                                  <a class="btn btn-link" href="java.base/java/lang/Runtime.html#traceMethodCalls(boolean)" rel="external">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/lang/Runtime.html#traceMethodCalls(boolean)" rel="external">
                                     traceMethodCalls(boolean)
                                   </a>
                                 </div>
