--- a/removed.html
+++ b/removed.html
@@ -28,6 +28,66 @@
     </span>
   </nav>
   <div class="java-versions">
+    <div class="panel panel-default java-version" id="java-13-panel">
+      <div class="panel-heading" id="java-13-header">
+        <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13-content" aria-controls="java-13-content">
+          Java 13
+        </a>
+      </div>
+      <div class="collapse" id="java-13-content" aria-labelledby="java-13-header">
+        <div class="panel-body">
+          <div class="panel panel-default java-module" id="java-13_java-base-panel" data-filter-value="java.base">
+            <div class="panel-heading" id="java-13_java-base-header">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base-content" aria-controls="java-13_java-base-content">
+                java.base
+              </a>
+            </div>
+            <div class="collapse" id="java-13_java-base-content" aria-labelledby="java-13_java-base-header">
+              <div class="panel-body">
+                <div class="panel panel-default java-package" id="java-13_java-base_java-lang-panel" data-filter-value="java.lang">
+                  <div class="panel-heading" id="java-13_java-base_java-lang-header">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base_java-lang-content" aria-controls="java-13_java-base_java-lang-content">
+                      java.lang
+                    </a>
+                  </div>
+                  <div class="collapse" id="java-13_java-base_java-lang-content" aria-labelledby="java-13_java-base_java-lang-header">
+                    <div class="panel-body">
+                      <div class="panel panel-default java-class" id="java-13_java-base_java-lang-Runtime-panel" data-filter-value="java.lang.Runtime">
+                        <div class="panel-heading" id="java-13_java-base_java-lang-Runtime-header">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-13_java-base_java-lang-Runtime-content" aria-controls="java-13_java-base_java-lang-Runtime-content">
+                            Runtime
+                          </a>
+                        </div>
+                        <div class="collapse" id="java-13_java-base_java-lang-Runtime-content" aria-labelledby="java-13_java-base_java-lang-Runtime-header">
+                          <div class="panel-body">
+                            <ul class="list-unstyled">
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/lang/Runtime.html#traceInstructions(boolean)" rel="external">
+                                    traceInstructions(boolean)
+                                  </a>
+                                </div>
+                              </li>
+                              <li class="java-member">
+                                <div class="title">
+                                  <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/12/docs/api/java.base/java/lang/Runtime.html#traceMethodCalls(boolean)" rel="external">
+                                    traceMethodCalls(boolean)
+                                  </a>
+                                </div>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default java-version" id="java-11-panel">
       <div class="panel-heading" id="java-11-header">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" href="#java-11-content" aria-controls="java-11-content">
