--- a/src/main/resources/java-versions.html
+++ b/src/main/resources/java-versions.html
@@ -1,12 +1,12 @@
 <div th:fragment="java-versions" class="java-versions">
     <div class="panel panel-default java-version"
          th:with="javaVersion=${entry.key},
-                  javaModules=${entry.value},
+                  pageModules=${entry.value},
                   javaVersionPrefix=${'java-' + javaVersion.toString().replace('.', '-')},
                   javaVersionHeaderId=${javaVersionPrefix + '-header'},
                   javaVersionContentId=${javaVersionPrefix + '-content'}"
          th:attr="id=${javaVersionPrefix + '-panel'}"
-         th:each="entry : ${modulesPerVersion}">
+         th:each="entry : ${pageModel.modulesPerVersion}">
       <div class="panel-heading"
            th:attr="id=${javaVersionHeaderId}">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaVersionContentId}"
@@ -18,86 +18,86 @@
            th:attr="id=${javaVersionContentId}, aria-labelledby=${javaVersionHeaderId}">
         <div class="panel-body">
           <div class="panel panel-default java-module"
-               th:with="javaPackages=${javaModule.getJavaPackages(javaVersion)},
-                        javaModulePrefix=${javaVersionPrefix + '_' + javaModule.name.replace('.', '-')},
-                        javaModuleHeaderId=${javaModulePrefix + '-header'},
-                        javaModuleContentId=${javaModulePrefix + '-content'}"
-               th:attr="id=${javaModulePrefix + '-panel'}, data-filter-value=${javaModule.name}"
-              th:each="javaModule : ${javaModules}">
+               th:with="pagePackages=${pageModule.packages},
+                        pageModulePrefix=${javaVersionPrefix + '_' + pageModule.name.replace('.', '-')},
+                        pageModuleHeaderId=${pageModulePrefix + '-header'},
+                        pageModuleContentId=${pageModulePrefix + '-content'}"
+               th:attr="id=${pageModulePrefix + '-panel'}, data-filter-value=${pageModule.name}"
+              th:each="pageModule : ${pageModules}">
             <div class="panel-heading"
-                 th:attr="id=${javaModuleHeaderId}"
-                 th:if="${javaPackages.empty}">
-              <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaModule)}" rel="external">
-                [[${javaModule.name}]]
+                 th:attr="id=${pageModuleHeaderId}"
+                 th:if="${pagePackages.empty}">
+              <a class="btn btn-link" th:href="${linkGenerator.generateLink(pageModule)}" rel="external">
+                [[${pageModule.name}]]
               </a>
             </div>
-            <th:block th:unless="${javaPackages.empty}">
+            <th:block th:unless="${pagePackages.empty}">
             <div class="panel-heading"
-                 th:attr="id=${javaModuleHeaderId}">
-              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaModuleContentId}"
-                 th:attr="aria-controls=${javaModuleContentId}">
-                [[${javaModule.name}]]
+                 th:attr="id=${pageModuleHeaderId}">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + pageModuleContentId}"
+                 th:attr="aria-controls=${pageModuleContentId}">
+                [[${pageModule.name}]]
               </a>
             </div>
             <div class="collapse"
-                 th:attr="id=${javaModuleContentId}, aria-labelledby=${javaModuleHeaderId}">
+                 th:attr="id=${pageModuleContentId}, aria-labelledby=${pageModuleHeaderId}">
               <div class="panel-body">
                 <div class="panel panel-default java-package"
-                     th:with="javaClasses=${javaPackage.getJavaClasses(javaVersion)},
-                              javaPackagePrefix=${javaModulePrefix + '_' + javaPackage.name.replace('.', '-')},
-                              javaPackageHeaderId=${javaPackagePrefix + '-header'},
-                              javaPackageContentId=${javaPackagePrefix + '-content'}"
-                     th:attr="id=${javaPackagePrefix + '-panel'}, data-filter-value=${javaPackage.name}"
-                     th:each="javaPackage : ${javaPackages}">
+                     th:with="pageClasses=${pagePackage.classes},
+                              pagePackagePrefix=${pageModulePrefix + '_' + pagePackage.name.replace('.', '-')},
+                              pagePackageHeaderId=${pagePackagePrefix + '-header'},
+                              pagePackageContentId=${pagePackagePrefix + '-content'}"
+                     th:attr="id=${pagePackagePrefix + '-panel'}, data-filter-value=${pagePackage.name}"
+                     th:each="pagePackage : ${pagePackages}">
                   <div class="panel-heading"
-                       th:attr="id=${javaPackageHeaderId}"
-                       th:if="${javaClasses.empty}">
-                    <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaPackage)}" rel="external">
-                      [[${javaPackage.name}]]
+                       th:attr="id=${pagePackageHeaderId}"
+                       th:if="${pageClasses.empty}">
+                    <a class="btn btn-link" th:href="${linkGenerator.generateLink(pagePackage)}" rel="external">
+                      [[${pagePackage.name}]]
                     </a>
                   </div>
-                  <th:block th:unless="${javaClasses.empty}">
+                  <th:block th:unless="${pageClasses.empty}">
                   <div class="panel-heading"
-                       th:attr="id=${javaPackageHeaderId}">
-                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaPackageContentId}"
-                       th:attr="aria-controls=${javaPackageContentId}">
-                      [[${javaPackage.name}]]
+                       th:attr="id=${pagePackageHeaderId}">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + pagePackageContentId}"
+                       th:attr="aria-controls=${pagePackageContentId}">
+                      [[${pagePackage.name}]]
                     </a>
                   </div>
                   <div class="collapse"
-                       th:attr="id=${javaPackageContentId}, aria-labelledby=${javaPackageHeaderId}">
+                       th:attr="id=${pagePackageContentId}, aria-labelledby=${pagePackageHeaderId}">
                     <div class="panel-body">
                       <div class="panel panel-default java-class"
-                           th:with="javaMembers=${javaClass.getJavaMembers(javaVersion)},
-                                    javaClassPrefix=${javaPackagePrefix + '-' + javaClass.name.replace('.', '-')},
-                                    javaClassHeaderId=${javaClassPrefix + '-header'},
-                                    javaClassContentId=${javaClassPrefix + '-content'}"
-                           th:attr="id=${javaClassPrefix + '-panel'}, data-filter-value=${javaPackage.name + '.' + javaClass.name}"
-                           th:each="javaClass : ${javaClasses}">
+                           th:with="pageMembers=${pageClass.members},
+                                    pageClassPrefix=${pagePackagePrefix + '-' + pageClass.name.replace('.', '-')},
+                                    pageClassHeaderId=${pageClassPrefix + '-header'},
+                                    pageClassContentId=${pageClassPrefix + '-content'}"
+                           th:attr="id=${pageClassPrefix + '-panel'}, data-filter-value=${pagePackage.name + '.' + pageClass.name}"
+                           th:each="pageClass : ${pageClasses}">
                         <div class="panel-heading"
-                             th:attr="id=${javaClassHeaderId}"
-                             th:if="${javaMembers.empty}">
-                          <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaClass)}" rel="external">
-                            [[${javaClass.name}]]
+                             th:attr="id=${pageClassHeaderId}"
+                             th:if="${pageMembers.empty}">
+                          <a class="btn btn-link" th:href="${linkGenerator.generateLink(pageClass)}" rel="external">
+                            [[${pageClass.name}]]
                           </a>
                         </div>
-                        <th:block th:unless="${javaMembers.empty}">
+                        <th:block th:unless="${pageMembers.empty}">
                         <div class="panel-heading"
-                             th:attr="id=${javaClassHeaderId}">
-                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaClassContentId}" 
-                             th:attr="aria-controls=${javaClassContentId}">
-                            [[${javaClass.name}]]
+                             th:attr="id=${pageClassHeaderId}">
+                          <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + pageClassContentId}" 
+                             th:attr="aria-controls=${pageClassContentId}">
+                            [[${pageClass.name}]]
                           </a>
                         </div>
                         <div class="collapse"
-                             th:attr="id=${javaClassContentId}, aria-labelledby=${javaClassHeaderId}">
+                             th:attr="id=${pageClassContentId}, aria-labelledby=${pageClassHeaderId}">
                           <div class="panel-body">
                             <ul class="list-unstyled">
                               <li class="java-member"
-                                  th:each="javaMember : ${javaMembers}">
+                                  th:each="pageMember : ${pageMembers}">
                                 <div class="title">
-                                  <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaMember)}" rel="external">
-                                    [[${javaMember.prettifiedSignature}]]
+                                  <a class="btn btn-link" th:href="${linkGenerator.generateLink(pageMember)}" rel="external">
+                                    [[${pageMember.signature}]]
                                   </a>
                                 </div>
                               </li>
@@ -119,12 +119,12 @@
 
     <div class="panel panel-default java-version"
          th:with="javaVersion=${entry.key},
-                  javaPackages=${entry.value},
+                  pagePackages=${entry.value},
                   javaVersionPrefix=${'java-' + javaVersion.toString().replace('.', '-')},
                   javaVersionHeaderId=${javaVersionPrefix + '-header'},
                   javaVersionContentId=${javaVersionPrefix + '-content'}"
          th:attr="id=${javaVersionPrefix + '-panel'}"
-         th:each="entry : ${packagesPerVersion}">
+         th:each="entry : ${pageModel.packagesPerVersion}">
       <div class="panel-heading"
            th:attr="id=${javaVersionHeaderId}">
         <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaVersionContentId}"
@@ -136,61 +136,61 @@
            th:attr="id=${javaVersionContentId}, aria-labelledby=${javaVersionHeaderId}">
         <div class="panel-body">
           <div class="panel panel-default java-package"
-               th:with="javaClasses=${javaPackage.getJavaClasses(javaVersion)},
-                        javaPackagePrefix=${javaVersionPrefix + '_' + javaPackage.name.replace('.', '-')},
-                        javaPackageHeaderId=${javaPackagePrefix + '-header'},
-                        javaPackageContentId=${javaPackagePrefix + '-content'}"
-               th:attr="id=${javaPackagePrefix + '-panel'}, data-filter-value=${javaPackage.name}"
-               th:each="javaPackage : ${javaPackages}">
+               th:with="pageClasses=${pagePackage.classes},
+                        pagePackagePrefix=${javaVersionPrefix + '_' + pagePackage.name.replace('.', '-')},
+                        pagePackageHeaderId=${pagePackagePrefix + '-header'},
+                        pagePackageContentId=${pagePackagePrefix + '-content'}"
+               th:attr="id=${pagePackagePrefix + '-panel'}, data-filter-value=${pagePackage.name}"
+               th:each="pagePackage : ${pagePackages}">
             <div class="panel-heading"
-                 th:attr="id=${javaPackageHeaderId}"
-                 th:if="${javaClasses.empty}">
-              <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaPackage)}" rel="external">
-                [[${javaPackage.name}]]
+                 th:attr="id=${pagePackageHeaderId}"
+                 th:if="${pageClasses.empty}">
+              <a class="btn btn-link" th:href="${linkGenerator.generateLink(pagePackage)}" rel="external">
+                [[${pagePackage.name}]]
               </a>
             </div>
-            <th:block th:unless="${javaClasses.empty}">
+            <th:block th:unless="${pageClasses.empty}">
             <div class="panel-heading"
-                 th:attr="id=${javaPackageHeaderId}">
-              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaPackageContentId}"
-                 th:attr="aria-controls=${javaPackageContentId}">
-                [[${javaPackage.name}]]
+                 th:attr="id=${pagePackageHeaderId}">
+              <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + pagePackageContentId}"
+                 th:attr="aria-controls=${pagePackageContentId}">
+                [[${pagePackage.name}]]
               </a>
             </div>
             <div class="collapse"
-                 th:attr="id=${javaPackageContentId}, aria-labelledby=${javaPackageHeaderId}">
+                 th:attr="id=${pagePackageContentId}, aria-labelledby=${pagePackageHeaderId}">
               <div class="panel-body">
                 <div class="panel panel-default java-class"
-                     th:with="javaMembers=${javaClass.getJavaMembers(javaVersion)},
-                              javaClassPrefix=${javaPackagePrefix + '-' + javaClass.name.replace('.', '-')},
-                              javaClassHeaderId=${javaClassPrefix + '-header'},
-                              javaClassContentId=${javaClassPrefix + '-content'}"
-                     th:attr="id=${javaClassPrefix + '-panel'}, data-filter-value=${javaPackage.name + '.' + javaClass.name}"
-                     th:each="javaClass : ${javaClasses}">
+                     th:with="pageMembers=${pageClass.members},
+                              pageClassPrefix=${pagePackagePrefix + '-' + pageClass.name.replace('.', '-')},
+                              pageClassHeaderId=${pageClassPrefix + '-header'},
+                              pageClassContentId=${pageClassPrefix + '-content'}"
+                     th:attr="id=${pageClassPrefix + '-panel'}, data-filter-value=${pagePackage.name + '.' + pageClass.name}"
+                     th:each="pageClass : ${pageClasses}">
                   <div class="panel-heading"
-                       th:attr="id=${javaClassHeaderId}"
-                       th:if="${javaMembers.empty}">
-                    <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaClass)}" rel="external">
-                      [[${javaClass.name}]]
+                       th:attr="id=${pageClassHeaderId}"
+                       th:if="${pageMembers.empty}">
+                    <a class="btn btn-link" th:href="${linkGenerator.generateLink(pageClass)}" rel="external">
+                      [[${pageClass.name}]]
                     </a>
                   </div>
-                  <th:block th:unless="${javaMembers.empty}">
+                  <th:block th:unless="${pageMembers.empty}">
                   <div class="panel-heading"
-                       th:attr="id=${javaClassHeaderId}">
-                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + javaClassContentId}" 
-                       th:attr="aria-controls=${javaClassContentId}">
-                      [[${javaClass.name}]]
+                       th:attr="id=${pageClassHeaderId}">
+                    <a class="btn btn-link" data-toggle="collapse" aria-expanded="false" role="button" th:href="${'#' + pageClassContentId}" 
+                       th:attr="aria-controls=${pageClassContentId}">
+                      [[${pageClass.name}]]
                     </a>
                   </div>
                   <div class="collapse"
-                       th:attr="id=${javaClassContentId}, aria-labelledby=${javaClassHeaderId}">
+                       th:attr="id=${pageClassContentId}, aria-labelledby=${pageClassHeaderId}">
                     <div class="panel-body">
                       <ul class="list-unstyled">
                         <li class="java-member"
-                            th:each="javaMember : ${javaMembers}">
+                            th:each="pageMember : ${pageMembers}">
                           <div class="title">
-                            <a class="btn btn-link" th:href="${linkGenerator.generateLink(javaMember)}" rel="external">
-                              [[${javaMember.prettifiedSignature}]]
+                            <a class="btn btn-link" th:href="${linkGenerator.generateLink(pageMember)}" rel="external">
+                              [[${pageMember.signature}]]
                             </a>
                           </div>
                         </li>
