Updated after new code generation implementation

--- a/removed.html
+++ b/removed.html
@@ -282,7 +282,7 @@
               <div class="panel-body">
                 <div class="panel panel-default java-package" id="java-11_java-sql_javax-transaction-xa-panel" data-filter-value="javax.transaction.xa">
                   <div class="panel-heading" id="java-11_java-sql_javax-transaction-xa-header">
-                    <a class="btn btn-link" href="https://docs.oracle.com/javase/10/docs/api/javax/transaction/xa/package-summary.html" rel="external">
+                    <a class="btn btn-link" href="https://docs.oracle.com/en/java/javase/13/docs/api/java.transaction.xa/javax/transaction/xa/package-summary.html" rel="external">
                       javax.transaction.xa
                     </a>
                   </div>
